2023年5月4日 00点12分

--- a/learning nodejs/05_HTTP/code/02-form.html
+++ b/learning nodejs/05_HTTP/code/02-form.html
@@ -7,11 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="http://127.0.0.1:9000" method="post">
+    <form action="http://127.0.0.1:9000/09.1-table.html" method="post">
         <input type="text" name="username">
         <input type="text" name="password">
         <input type="submit" value="提交">
     </form>
-    
 </body>
 </html>
