--- a/learning nodejs/05_HTTP/code/12-URL.html
+++ b/learning nodejs/05_HTTP/code/12-URL.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <!-- 绝对路径 -->
-    <a href="https://www.baidu.com">百度</a> //一般用于访问外站
+    <a href="https://www.baidu.com">百度</a> <!-- 一般用于访问外站 -->
     <a href="//jd.com">京东</a>
-    <a href="/05_HTTP/code/09.1-table.html">搜索</a> //常用 为了解决换域名主机命的情况
+    <a href="/05_HTTP/code/09.1-table.html">搜索</a> <!-- 常用 为了解决换域名主机命的情况 -->
+    <hr>
+    <!-- 绝对路径 (不可靠，因为是参照当前网站url来计算)-->
+    <a href="./11-静态资源服务/page/css/index.css">访问CSS</a>
+    <a href="11-静态资源服务/page/js/index.js">访问JS</a>
+    <!-- ../ 上一层 -->
 </body>
 </html>
